--- a/research-recherche/taxfiling-research-summary.html
+++ b/research-recherche/taxfiling-research-summary.html
@@ -46,7 +46,7 @@
 				},{
 					title: "...",
 				},{
-					title: "Canada.ca content improvement projects",
+					title: "Improving content on Canada.ca",
 					href: "https://canada-ca.github.io/pages/projectoverview.html"
 				}],
 				search: true,
