--- a/research-recherche/impots-resume-recherche.html
+++ b/research-recherche/impots-resume-recherche.html
@@ -47,7 +47,7 @@
 							title: "...",
 						},
 						{
-							title: "Projets d'améliorer le contenu sur Canada.ca",
+							title: "Améliorer le contenu sur Canada.ca",
 							href: "https://canada-ca.github.io/pages/apercu-projet.html"
 						}],
 				search: true,
@@ -242,7 +242,7 @@ Description détaillée
 			</tr>
 			</tbody>
 		</table>
-	</div>	
+	</div>
 		<p>42 participants au total	 </p>
 			 </details>
 
