--- a/research-summaries/maladies-resume-researche.html
+++ b/research-summaries/maladies-resume-researche.html
@@ -47,7 +47,7 @@
 							title: "...",
 						},
 						{
-							title: "Projets d'améliorer le contenu sur Canada.ca",
+							title: "Améliorer le contenu sur Canada.ca",
 							href: "https://canada-ca.github.io/pages/apercu-projet.html"
 						}],
 				search: true,
