fix broken links

--- a/pages/starting-a-business-decisions.html
+++ b/pages/starting-a-business-decisions.html
@@ -54,7 +54,7 @@
 
 <h1>Starting a business decisions</h1>
 
-  <img class="img-responsive" alt="Flow of decisions made when setting up a business. Accessible interactive version in link below." src="/images/Starting_a_business_decisions_Nov2016_grey_1803x1230.png">
+  <img class="img-responsive" alt="Flow of decisions made when setting up a business. Accessible interactive version in link below." src="../images/start-lancer/Starting_a_business_decisions_Nov2016_grey_1803x1230.png">
   <p>For the accessible interactive version, please go <a href="https://ca.surveygizmo.com/s3/50019452/Starting-a-business-decisions">here</a>.</p>
 
 <div id="def-preFooter">
