--- a/pages/decisions-demarrer-entreprise.html
+++ b/pages/decisions-demarrer-entreprise.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-fr.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Tâches principales pour Canada.ca</title>
+		<title>Décisions pour démarrer une entreprise</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
@@ -54,7 +54,7 @@
 
 <h1>Décisions pour démarrer une entreprise</h1>
 
-  <img class="img-responsive" alt="Diagramme de décision pour constituer une entreprise en société?. Version accessible interactif ci-dessous." src="../images/start-lancer/Decisions_demarrer_une_entreprise_Nov2016_gris_1818x1237.png">
+  <img class="img-responsive" alt="Diagramme de décision pour constituer une entreprise en société. Version accessible interactif ci-dessous." src="../images/start-lancer/Decisions_demarrer_une_entreprise_Nov2016_gris_1818x1237.png">
   <p>Pour la version accessible interactif, voulez clicker <a href="https://ca.surveygizmo.com/s3/50019452/ef0cf0ea3d5c">ici</a>.</p>
 
 <div id="def-preFooter">
