--- a/pages/decisions-demarrer-entreprise.html
+++ b/pages/decisions-demarrer-entreprise.html
@@ -54,8 +54,9 @@
 
 <h1>Décisions pour démarrer une entreprise</h1>
 
-  <img class="img-responsive" alt="Diagramme de décision pour constituer une entreprise en société. Version accessible interactif ci-dessous." src="../images/start-lancer/Decisions_demarrer_une_entreprise_Nov2016_gris_1818x1237.png">
-  <p>Pour la version accessible interactif, voulez clicker <a href="https://ca.surveygizmo.com/s3/50019452/ef0cf0ea3d5c">ici</a>.</p>
+  <img class="img-responsive" alt="Diagramme de décision pour constituer une entreprise en société." src="../images/start-lancer/Decisions_demarrer_une_entreprise_Nov2016_gris_1818x1237.png" longdesc="Consultez la version accessible interactive.">
+	<br>
+  <p>Consultez la <a href="https://ca.surveygizmo.com/s3/50019452/ef0cf0ea3d5c">version accessible interactive</a>.</p>
 
 <div id="def-preFooter">
 </div>
