--- a/research-recherche/maladies-resume-recherche.html
+++ b/research-recherche/maladies-resume-recherche.html
@@ -226,7 +226,7 @@ Il y a ensuite un court paragraphe de texte trop petit pour le lire, puis un cha
 				<th scope="col">Base</th>
 				<th scope="col">Validation</th>
 
-			</tr></thead><tbody><tr><td>1. Conseil pour se protéger contre la grippe: vaccin</td>
+			</tr></thead><tbody><tr><td>1. Conseil pour se protéger contre la grippe : vaccin</td>
 				<td  >69%</td>
 				<td>87%</td>
 			</tr><tr><td>2. Myth du vaccin qui cause l'autisme</td>
@@ -235,7 +235,7 @@ Il y a ensuite un court paragraphe de texte trop petit pour le lire, puis un cha
 			</tr><tr><td>3. Test de dépistage du Zika au retour de voyage</td>
 				<td  >75%</td>
 				<td>100%</td>
-			</tr><tr><td>4. Comment éviter d'attraper le Zika: pays</td>
+			</tr><tr><td>4. Comment éviter d'attraper le Zika : pays</td>
 				<td  >69%</td>
 				<td>100%</td>
 			</tr><tr><td>5. Premier calendrier de vaccination pour les nouveau-nés</td>
@@ -244,14 +244,14 @@ Il y a ensuite un court paragraphe de texte trop petit pour le lire, puis un cha
 			</tr><tr><td>6. Vaccin contre la grippe pendant la grossesse</td>
 				<td>75%</td>
 				<td>94%</td>
-			</tr><tr><td>7. Symptômes de la grippe: maux de tête, fièvre</td>
+			</tr><tr><td>7. Symptômes de la grippe : maux de tête, fièvre</td>
 				<td  >50%</td>
 				<td>94%</td>
-			</tr><tr><td>8. Surveillance de l'influenza: cas de la semaine dernière</td>
+			</tr><tr><td>8. Surveillance de l'influenza : cas de la semaine dernière</td>
 				<td  >94%</td>
 				<td>88%</td>
 			</tr>
-			<tr><td>9. Italie: Alerte médicale, rougeole</td>
+			<tr><td>9. Italie : alerte médicale, rougeole</td>
 				<td  >50%</td>
 				<td>69%</td>
 				</tr>
