--- a/research-recherche/impots-resume-recherche.html
+++ b/research-recherche/impots-resume-recherche.html
@@ -92,28 +92,25 @@ padding-top: 10px;
 
   <div>
 
-    <p>En novembre 2017, le projet d’optimisation de la production de déclarations de la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> a été entrepris dans le but de faciliter la tâche aux entreprises canadiennes qui souhaitent s’acquitter de leurs obligations en matière de <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> et de retenues sur la paie. Les concepteurs et les chercheurs du Bureau de la transformation numérique (BTN) du Secrétariat du Conseil du Trésor du Canada (SCT) ont formé une équipe multidisciplinaire avec l’Agence du revenu du Canada (ARC). L’équipe était composée de représentants des programmes de l’expérience utilisateur de l'<abbr title="Agence du revenu du Canada">ARC</abbr>, de l’édition Web, de la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> et des retenues sur la paie, ainsi que des agents des centres d’appels qui ont aidé directement les Canadiens à s’acquitter de leurs obligations fiscales d’entreprise.
-		</p>
+    <p>En novembre 2017, le projet d’optimisation de la production de déclarations de la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> a été entrepris dans le but de faciliter la tâche aux entreprises canadiennes qui souhaitent s’acquitter de leurs obligations en matière de <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> et de retenues sur la paie. Les concepteurs et les chercheurs du Bureau de la transformation numérique (BTN) du Secrétariat du Conseil du Trésor du Canada (SCT) ont formé une équipe multidisciplinaire avec l’Agence du revenu du Canada (ARC). L’équipe était composée de représentants des programmes de l’expérience utilisateur de l’<abbr title="Agence du revenu du Canada">ARC</abbr>, de l’édition Web, de la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> et des retenues sur la paie, ainsi que des agents des centres d’appels qui ont aidé directement les Canadiens.</p>
 
-<h2>Recherche</h2>
+<h2>Découverte</h2>
 
-<p>L’équipe a commencé par faire des recherches sur ces tâches sur le site Canada.ca, en utilisant les sources de données existantes.</p>
+<p>L’équipe a commencé par faire des recherches sur les tâches sur le site Canada.ca, en utilisant les sources de données existantes.</p>
 
-<p>Chaque mois, l’<abbr title="Agence du revenu du Canada">ARC</abbr> mène un sondage à la fin des tâches principales pour en apprendre davantage sur la façon dont les citoyens utilisent les services numériques. Il est demandé aux personnes qui consultent les pages de l’<abbr title="Agence du revenu du Canada">ARC</abbr> cce qu’elles ont tenté d’effectuer et si elles y sont parvenues. « Produire une déclaration de <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> » et « Calculer les retenues sur la paie » sont des tâches principales qui reviennent souvent.
-  </p>
+<p>Chaque mois, l’<abbr title="Agence du revenu du Canada">ARC</abbr> mène un sondage de sortie sur les tâches principales pour en apprendre davantage sur la façon dont les citoyens utilisent les services numériques. Il est demandé aux personnes qui consultent les pages de l’<abbr title="Agence du revenu du Canada">ARC</abbr> ce qu’elles ont tenté d’effectuer et si elles y sont parvenues. « Produire une déclaration de <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> » et « Calculer les retenues sur la paie » sont des tâches principales qui reviennent souvent.  </p>
 
-<p>Les données sur le trafic Web ont montré que les pages traitant du calcul des retenues sur la paie et des déclarations des retenues sur la paie ont reçu plus de 4,2 millions de visites en 2017. Le sujet des déclarations de <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> a reçu plus de 1,3 million de visites. Plus de 88 % des personnes effectuent ces tâches à un ordinateur de bureau ou un ordinateur portatif, et non à l’aide d’un appareil mobile, renseignement utile à la préparation des tests. </p>
+<p>Les données sur le trafic Web ont montré que les pages traitant du calcul des retenues sur la paie et des déclarations des retenues sur la paie ont reçu plus de 4,2 millions de visites en 2017. Le sujet des déclarations de <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> a reçu plus de 1,3 million de visites. Plus de 88 % des personnes effectuent ces tâches à un ordinateur de bureau ou un ordinateur portatif, et non à l’aide d’un appareil mobile. Ce renseignement a été utile à la préparation des tests. </p>
 
-<p>Nous avons analysé le degré de lisibilité des pages sur la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> et les retenues sur la paie. L’analyse quantitative a confirmé ce qui semble intuitif : les pages Web sur les obligations fiscales sont assez difficiles à lire. Environ 24 % du texte des pages principales sur la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> et les retenues sur la paie comptaient de longues phrases, et 17 % étaient rédigées à la forme passive. Le Guide de rédaction du contenu du site Canada.ca et les experts du langage clair recommandent d’utiliser des phrases courtes et d’écrire à la forme active.
-</p>
+<p>Nous avons analysé le degré de lisibilité des pages sur la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> et les retenues sur la paie. L’analyse quantitative a confirmé ce qui semble intuitif : les pages Web sur les obligations fiscales sont assez difficiles à lire. Environ 24 % du texte des pages principales sur la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> et les retenues sur la paie comptaient de longues phrases, et 17 % étaient rédigées à la forme passive. Le Guide de rédaction du contenu du site Canada.ca et les experts en langage clair recommandent d’utiliser des phrases courtes et d’écrire à la forme active. </p>
 
 <p>Nous commencions alors à comprendre les problèmes auxquels les Canadiens étaient confrontés lorsqu’ils tentaient de s’acquitter de leurs obligations fiscales en ligne. L’étape suivante consistait à confirmer les hypothèses au moyen de tests de facilité d’emploi modérés à distance. </p>
 
 
 
-<h2>Établir une base de référence</h2>
+<h2>Établissement d’une référence</h2>
 
-<p>Pour vérifier les hypothèses, l’équipe a créé 16 tâches possibles liées à la production de déclarations des entreprises, ainsi qu’un sondage en ligne simple, afin que les agents de centre d’appels et les experts en la matière de l’<abbr title="Agence du revenu du Canada">ARC</abbr> puissent les commenter. Grâce à ces commentaires, l’équipe a réduit la liste à dix scénarios de tâches, avec bon espoir qu’ils étaient exacts et qu’ils reflétaient des problèmes réels des citoyens.  </p>
+<p>Pour vérifier les hypothèses, l’équipe a créé 16 tâches possibles liées à la production de déclarations des entreprises. Nous avons créé un sondage en ligne simple, afin que les agents de centre d’appels et les experts en la matière de l’<abbr title="Agence du revenu du Canada">ARC</abbr> puissent  commenter ces tâches. Grâce à ces commentaires, l’équipe a réduit la liste à dix scénarios de tâches, avec bon espoir qu’ils étaient exacts et qu’ils reflétaient des problèmes réels des citoyens.  </p>
 
 <ol>
 	<li class="li-sp">Pouvez-vous payer les retenues de votre entreprise pour le <abbr title="Régime de pensions du Canada">RPC</abbr> et l’<abbr title="assurance-emploi">AE</abbr> à l’<abbr title="Agence du revenu du Canada">ARC</abbr> au moyen d’Interac?
@@ -143,7 +140,7 @@ Une entreprise perçoit des retenues sur la paie de ses employés. Elle envoie l
 
 </ol>
 
-<p>Nous avons procédé à des tests modérés à distance pour les ordinateurs de bureau et les ordinateurs portatifs afin d’établir la base de référence, effectués par 17 participants de l’ensemble du Canada (14 en anglais et 3 en français). Nous avons recruté des propriétaires de petites entreprises, avons cherché des travailleurs autonomes ou des propriétaires uniques, sans expérience préalable de la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> ou des retenues sur la paie.</p>
+<p>Nous avons procédé à des tests modérés à distance pour les ordinateurs de bureau et les ordinateurs portatifs afin d’établir la base de référence. Les tests ont été effectués par 17 participants de l’ensemble du Canada (14 en anglais et 3 en français). Nous avons recruté des propriétaires de petites entreprises, avons cherché des travailleurs autonomes ou des propriétaires uniques, sans expérience préalable de la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> ou des retenues sur la paie.</p>
 
 <p>Nous avons demandé aux participants d’effectuer les dix tâches en une heure. S’ils ont pris plus de cinq minutes pour accomplir une tâche, nous avons jugé que c’était trop long pour être considéré comme une réussite et nous les avons fait passer à la question suivante. </p>
 
@@ -151,10 +148,10 @@ Une entreprise perçoit des retenues sur la paie de ses employés. Elle envoie l
 
 <p>Au cours de cette première série de tests, nous avons organisé des séances d’observation de vidéos des tests de facilité d’emploi. Elles ont permis de mieux comprendre le fonctionnement des tests de facilité d’emploi. Les experts de l’<abbr title="Agence du revenu du Canada">ARC</abbr> qui ont rédigé les pages Web ont vu de vraies personnes les utiliser, et ils ont généralement trouvé cela révélateur. </p>
 
-<p>Les résultats des premiers tests ont montré une repérabilité moyenne des tâches de 62 % et une réussite moyenne des tâches de 48 %. </p>
+<p>Les résultats des premiers tests ont montré que, en moyenne, les participants ont pu trouver les renseignements dans une proportion de 62 %. Cependant, ils ont réussi à compléter les tâches avec succès seulement dans une proportion de 48 %. </p>
 
 
-<h2>Remaniement visant à améliorer la réussite des tâches</h2>
+<h2>Restructuration visant à améliorer le taux de réussite des tâches</h2>
 
 <p>Pour la phase des prototypes, nous avons divisé en deux équipes de travail, l’une pour les tâches liées à la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> et l’autre pour les tâches liées aux retenues sur la paie. Chaque équipe a passé en revue le rapport des tests initiaux, regardé d’autres vidéos de participants qui tentaient d’accomplir des tâches, et examiné la navigation associée aux clics, c’est-à-dire les séquences de pages que les participants ont visitées. Cela a aidé à montrer quelles pages poussaient les personnes à s’écarter de la voie « idéale ». Parfois, nous l'avons fait parce que le bon lien n’était pas suffisamment évident. À d'autres moments, un autre lien était plus attrayant.
 
