--- a/research-recherche/taxfiling-research-summary.html
+++ b/research-recherche/taxfiling-research-summary.html
@@ -89,41 +89,39 @@ padding-top: 10px;
   </header>
 
   <div>
-    <p>The Tax Filing optimization project kicked off in November 2017 with the goal of making it easier for Canadian businesses to fulfill their <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> and Payroll obligations. Designers and researchers from the <abbr title="Treasury Board of Canada Secretariat">TBS</abbr> Digital Transformation Office formed a multi-disciplinary team with the Canada Revenue Agency. The team included representatives from <abbr title="Canada Revenue Agency">CRA</abbr>’s user experience, web publishing, <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> and Payroll programs, as well as call centre agents who have provided direct assistance to Canadians fulfilling their business tax obligations.</p>
+    <p>The Tax filing optimization project kicked off in November 2017 with the goal of making it easier for Canadian businesses to fulfill their <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> and payroll obligations. Designers and researchers from the <abbr title="Treasury Board of Canada Secretariat">TBS</abbr> Digital Transformation Office formed a multi-disciplinary team with the Canada Revenue Agency. The team included representatives from <abbr title="Canada Revenue Agency">CRA</abbr>’s user experience, web publishing, <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> and Payroll programs, as well as call centre agents who have provided direct assistance to Canadians. </p>
 
 <h2>Discovery</h2>
 
-<p>The team began by researching these tasks on Canada.ca, using existing data sources.</p>
+<p>The team began by researching tasks on Canada.ca, using existing data sources.</p>
 
-<p>The <abbr title="Canada Revenue Agency">CRA</abbr> conducts a monthly top task exit survey to find out more about how citizens use their digital services. It asks people who come to <abbr title="Canada Revenue Agency">CRA</abbr> pages what they were trying to do and whether they were successful. “File a <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> return” and “Calculate payroll deductions” are consistent top tasks.</p>
+<p>The <abbr title="Canada Revenue Agency">CRA</abbr> conducts a monthly top task exit survey to find out more about how citizens use their digital services. It asks people who come to <abbr title="Canada Revenue Agency">CRA</abbr> pages what they were trying to do and whether they were successful. “File a <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> return” and “Calculate payroll deductions” are consistent top tasks.  </p>
 
-<p>Web traffic data showed that the pages for calculating payroll deductions and reporting payroll got over 4.2 million visits in 2017. The topic of <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> returns had over 1.3 million visits. OOver 88% of people do these tasks on desktop or laptop computers, not mobile devices, which was helpful input for our test planning.</p>
+<p>Web traffic data showed that the pages for calculating payroll deductions and reporting payroll got over 4.2 million visits in 2017. The topic of <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> returns had over 1.3 million visits. Over 88% of people do these tasks on desktop or laptop computers, not mobile devices. This was helpful input for our test planning. </p>
 
-<p>We analyzed the readability levels of the <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> and Payroll pages. Analysis confirmed quantitatively what people know intuitively: web pages about tax obligations are quite hard to read. About 24% of the text on key <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> and payroll pages used long sentences, and 17% was written in passive language. The Canada.ca Content Style Guide and plain language experts recommend using short sentences and writing in an active voice. </p>
+<p>We analyzed the readability levels of the <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> and Payroll pages. Analysis confirmed quantitatively what people know intuitively: web pages about tax obligations are quite hard to read. About 24% of the text on key <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> and payroll pages used long sentences, and 17% was written in passive language. The Canada.ca Content Style Guide and plain language experts recommend using short sentences and writing in the active voice. </p>
 
-<p>We were starting to understand the issues Canadians were facing when trying to fulfill their business tax obligations online. The next step was to confirm our hypotheses with remote moderated usability testing.</p>
+<p>We were starting to understand the issues Canadians were facing when trying to fulfill their business tax obligations online. The next step was to confirm our hypotheses with remote moderated usability testing.  </p>
 
 
 <h2>Establishing a baseline</h2>
 
-<p>To test our hypotheses, the team developed 16 possible tasks related to filing business taxes, and created a simple online survey so that <abbr title="Canada Revenue Agency">CRA</abbr>’s call centre agents and subject matter experts could comment on them. With this input, we narrowed down the list to 10 task scenarios, confident that they were accurate and represented real issues for citizens. </p>
+<p>To test our hypotheses, the team developed 16 possible tasks related to filing business taxes. We created a simple online survey so that <abbr title="Canada Revenue Agency">CRA</abbr>’s call centre agents and subject matter experts could comment on the tasks. With this input, we narrowed down the list to 10 task scenarios, confident that they were accurate and represented real issues for citizens. </p>
 
 <ol>
-<li class="li-sp">Can you pay your company's payroll <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Employment Insurance">EI</abbr> deductions to CRA using Interac?</li><br>
+	<li>Can you pay your company's payroll <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Employment Insurance">EI</abbr> deductions to CRA using Interac?<br>
 <b>Yes</b></li>
 
- <li class="li-sp">You issued an invoice, with <abbr title="Goods and Services Tax">GST</abbr> included, on the last day of the quarter. Can you wait until the invoice is paid before sending in your payment?
-<br><b>No (We usually consider payment to be due on the date you issue an invoice...)</b></li>
+ <li class="li-sp">You issued an invoice, with <abbr title="Goods and Services Tax">GST</abbr> included, on the last day of the quarter. Can you wait until the invoice is paid before sending in your payment?<br><b>No (We usually consider payment to be due on the date you issue an invoice...)</b></li>
 
- <li class="li-sp">You accidentally made an error when you submitted your last payroll return. You under-paid your source deductions to <abbr title="Canada Revenue Agency">CRA</abbr>by $350. Will you get fined?<br><b>No because it was less than $500 and you didn't knowingly or under circumstances of gross negligence, fail to remit it.</b></li>
+ <li class="li-sp">You accidentally made an error when you submitted your last payroll return. You under-paid your source deductions to <abbr title="Canada Revenue Agency">CRA</abbr> by $350. Will you get fined?<br><b>No because it was less than $500 and you didn't knowingly or under circumstances of gross negligence, fail to remit it</b></li>
 
  <li class="li-sp">If your Ontario company sells and ships a taxable product to a customer in Alberta, do you charge them <abbr title="Goods and Services Tax">GST</abbr> or <abbr title="Harmonized Sales Tax">HST</abbr>?<br><b><abbr title="Goods and Services Tax">GST</abbr> (5%) only. Reason: Alberta does not charge <abbr title="Harmonized Sales Tax">HST</abbr></b></li>
 
  <li class="li-sp">You mailed a cheque to pay your company’s payroll deductions. How would you confirm that the <abbr title="Canada Revenue Agency">CRA</abbr> received it?<br><b>Access account balance through My Business Account OR Represent a Client OR wait for Statement of Account</b></li>
 
  <li class="li-sp">
-You registered for <abbr title="Goods and Services Tax">GST</abbr> or the first time on August 31, and will file your return annually. Your fiscal year ended October 31. Your net tax for September and October was $2,500. Will you need to pay your <abbr title="Goods and Services Tax">GST</abbr> in instalments for the next fiscal year?
-<br>
+You registered for <abbr title="Goods and Services Tax">GST</abbr> for the first time on August 31, and will file your return annually. Your fiscal year ended October 31. Your net tax for September and October was $2,500. Will you need to pay your <abbr title="Goods and Services Tax">GST</abbr> in instalments for the next fiscal year?<br>
 <b>Yes (>$3000)</b></li>
 
  <li class="li-sp">
@@ -138,7 +136,7 @@ A business collects taxes from its employees’ pay. It sends the taxes it has c
 </ol>
 
 
-<p>We used remote moderated testing on desktop and laptop computers to establish the baseline, testing 17 participants from across Canada (14 English and 3 French). We recruited owners of small businesses, screening for those who were self-employed or sole proprietors, without prior <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> or payroll experience.</p>
+<p>We used remote moderated testing on desktop and laptop computers to establish the baseline. We tested 17 participants from across Canada (14 English and 3 French). We recruited owners of small businesses, screening for those who were self-employed or sole proprietors, without prior <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> or payroll experience.</p>
 
 <p>Participants were asked to complete all 10 tasks in one hour. If they took longer than 5 minutes to complete a task, we counted that as too long to be considered successful and had them move on to the next question.</p>
 
@@ -146,14 +144,14 @@ A business collects taxes from its employees’ pay. It sends the taxes it has c
 
 <p>During this first round of testing, we convened observation sessions to watch videos of the usability testing. These sessions provided an opportunity for people to better understand how usability testing works. The <abbr title="Canada Revenue Agency">CRA</abbr> experts who wrote the web pages saw real people using them, and typically found it eye-opening.</p>
 
-<p>The results of the baseline test showed that the average findability of our tasks was 62%, and the average task success was 48%.  </p>
+<p>The results of the baseline test showed that on average, participants could find the right information 62% of the time. However, they were only able to successfully complete the tasks 48% of the time. </p>
 
 <h2>Redesign to improve task success</h2>
 
-<p>For the prototyping phase, we divided into two working teams, one for <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> tasks and the other for payroll tasks. Each team combed through the baseline test report, watched more videos of participants trying to complete their tasks, and looked at the click paths — the sequences of pages that participants went to. This helped show which pages were causing people to go off the “ideal” path, whether because the correct link wasn’t clear enough, or a different link was more appealing.
+<p>For the prototyping phase, we divided into two working teams, one for <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> tasks and the other for payroll tasks. Each team combed through the baseline test report, watched more videos of participants trying to complete their tasks, and looked at the click paths — the sequences of pages that participants went to. This helped show which pages were causing people to go off the “ideal” path. Sometimes this was because the correct link wasn’t clear enough. Other times a different link was more appealing.
 </p>
 
-<p>One of the primary techniques for improving citizen success was to take long pages of text, and separate discreet sub-tasks or topics into steps. This pattern worked because it kept related information together, while allowing people to see the sequence of activities, and jump to the section that best suited their needs.
+<p>One of the primary techniques for improving citizen success was to take long pages of text, and separate sub-tasks or topics into steps. This pattern worked because it kept related information together, while allowing people to see the sequence of activities, and jump to the section that best suited their needs.
 </p>
 
 <br>
@@ -169,34 +167,34 @@ A business collects taxes from its employees’ pay. It sends the taxes it has c
 Detailed description
 </summary>
 <br>
-<p>Two webpages are shown side by side. The page on the left is labelled "Baseline" and shows what the “How and when to remit source deductions” webpage looked like on Canada.ca when the project started. The page is so long and thin it is impossible to read the words on the page. In red text, with an arrow pointing to this webpage, is written: Page was too long for people to find their answer.</p>
+<p>Two webpages are shown side by side. The page on the left is labelled "Baseline" and shows that the “How and when to remit source deductions” webpage on Canada.ca was extremely long when the project started.  An arrow points to the webpage with the annotation "Page was too long for people to find their answer."</p>
 
-<p>The page on the right is labelled "Redesign” and shows the “How and when to pay (remit) source deductions” page with 5 steps: 1. Overview, 2. Due dates, 3. Make a payment (remittance) 4. Confirm payment (remittance) received and More information. In green text, with an arrow pointing to the steps, is written the following: Tasks grouped into steps made them easy to scan. </p>
+<p>The page on the right is labelled "Redesign” and shows the “How and when to pay (remit) source deductions” page with 5 steps: 1. Overview, 2. Due dates, 3. Make a payment (remittance) 4. Confirm payment (remittance) received and More information.  An arrow points to the steps with the annotation "Tasks grouped into steps made them easy to scan."  </p>
 
-<p>The 3. Make a payment (remittance) tab is open and on the page is a bulleted list with the heading “What you need” followed by 7 illegible bullets. At the bottom of the page is a dark blue button with white text that reads “Make your payment”. In green text, beside an arrow pointing to the blue button, is written: Buttons draw attention to the main action on the page.</p>
+<p>The image shows the much simpler and shorter content of tab 3. Make a payment (remittance). At the bottom of the page is a button with the text “Make your payment”. An arrow points to the button with the annotation "Buttons draw attention to the main action on the page."</p>
 
 </details>
 
 <br>
-<p>We found that people who were not familiar with tax rules did not grasp the term “remit,” causing them to miss the link to this page. We could not completely replace the term remit, since it has legal connotations, but we simplified the title by using “pay (remit),” bridging citizen and technical terminology.</p>
+<p>We also found that people who were not familiar with tax rules did not always grasp the term “remit”. They often skipped over links to pages with that content. We could not completely replace the term remit, since it has legal connotations. Instead, we chose to bridge citizen and technical terminology by using both “pay” and “remit” in links and page titles.</p>
 
 <h2>Measuring success rates on the redesigned prototype</h2>
 
-<p>Once the revised design was ready, 25 new participants were recruited to complete the same 10 tasks. We used the same methods as the baseline test to ensure they could be directly compared. Our target was either 80% success, or an improvement of at least 20% points over the baseline score.  </p>
+<p>Once the revised design was ready, 25 new participants were recruited to complete the same 10 tasks. We used the same methods as the baseline test to ensure the tests could be directly compared. Our target was either 80% success, or an improvement of at least 20% points over the baseline score. </p>
 
-<p>Findability rates for the revised content rose from 62% up to 90% (+28% points) and task success rates rose from 48% to 76% (+27% points). </p>
+<p>Findability rates for the revised content rose from 62% up to 90% (+28% points). Task success rates rose from 48% to 76% (+28% points).</p>
 
 </div>
 </div>
 <div>
-<img class="img-responsive hidden-sm hidden-xs" alt="Bar graph comparing the task success rates on the live site (baseline) and the redesigned prototype (validation) for all 6 tasks. Data for each task is in the table below." src="../images/taxes-impots/CRA-TF-task-success-chart.jpg"/>
+<img class="img-responsive hidden-sm hidden-xs" alt="Bar graph comparing the task success rates on the live site (baseline) and the redesigned prototype (validation) for all 6 tasks. Data for each task is in the table below. The graph shows that participants had higher success rates for every task in the validation testing." src="../images/taxes-impots/CRA-TF-task-success-chart.jpg"/>
 
 <div class="row col-md-9">
 	<details>
 			 <summary>
 			  Task completion success rates – table
 			 </summary>
-			 <p>Baseline measurement of task completion success rates at start of project (baseline), and on prototype redesigned by project team (validation).</p>
+			 <p>Baseline measurement at start of project, validation on prototype redesigned by project team.</p>
 				 <div class="table-bravo">
 				       <table class="table table-bordered">
 
@@ -245,25 +243,25 @@ Detailed description
 
 <h2>Key drivers of success</h2>
 
- <p>The team summarized the 6 core changes that had the most impact on improving success rates:</p>
+ <p>The team summarized the 6 core changes that had the most impact on improving success rates: </p>
 <ul>
 
-<li>Chunking long and complex pages into steps to improve navigation and scanning</li>
+<li>Make top tasks visible: include keywords words that users are looking for and understand in doormats and labels</li>
 
-<li>Reworking labels and doormat text to be comprehensive and include key words near the start of the text</li>
+<li>Organize for the user: organize for a user moving through tasks, rather than a <abbr title="Canada Revenue Agency">CRA</abbr> organized structure</li>
 
-<li>Grouping long lists of links into steps or links with doormats</li>
+<li>Match user language: not everyone understands terminology, reduce ambiguity and include plain language definitions </li>
 
-<li>Renaming topics using a citizen task structure, rather than <abbr title="Canada Revenue Agency">CRA</abbr> organizational structure</li>
+<li>Group tasks in sequence: a step-by-step structure provides context to tasks that are handled sequentially</li>
 
-<li>Reworking language to more closely match Canadians’ terminology and reduce ambiguity</li>
+<li>Reduce complexity: chunk complex, long pages of information into smaller pieces</li>
 
-<li>Reorganizing landing pages into a step-by-step structure to help provide context to the content</li>
+<li>Group links together: avoid long lists of links, break them up and group like content together</li>
 </ul>
 
 <h2>Request the research </h2>
 
-<p>If you’d like to see the research findings from this project, let us know. Email us at <a href="mailto:information@tbs-sct.gc.ca">information@tbs-sct.gc.ca</a>.
+<p>If you’d like to see the research findings from this project, let us know. Email us at <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a>.
 
 <h2>What do you think? </h2>
 
